<resources>
    <string name="app_name">StatusCloud</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="delete">Delete</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="select_all">Select All</string>
    <string name="save">Save</string>
    <string name="time_ascending">Oldest-Newest</string>
    <string name="name_ascending">A-Z</string>
    <string name="time_descending">Newest-Oldest</string>
    <string name="name_descending">Z-A</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>

    <string name="save_popup_text">**This may be blank.....do not include the file extension</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="button_upload">Upload</string>
    <string name="button_image">Image</string>
    <string name="button_video">Video</string>
    <string name="text_view_media_select">Selected Media</string>

    <string name="shareUrl">Share Url</string>

</resources>