<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        android:showAsAction="always"/>

    <item
        android:id="@+id/menu_save"
        android:title="@string/save"
        android:icon="@drawable/ic_save"
        android:showAsAction="always"/>

    <item
        android:id="@+id/menu_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        android:showAsAction="always"/>
    <item
        android:id="@+id/menu_select_all"
        android:title="@string/select_all"
        android:icon="@drawable/ic_select_all"
        android:showAsAction="always" />
</menu>